--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>ditech-trasferte</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="DiTech Ordini">
+    <meta name="msapplication-TileImage" content="./img/icons/android-chrome-96x96.png">
+    <meta name="msapplication-TileColor" content="#009873">
+    <link rel="apple-touch-icon" href="./img/icons/android-chrome-96x96.png">
+    <link rel="icon" href="./favicon.ico">
+    <link rel="manifest" href="./manifest.json"/>
+    <title>DiTech/TRASFERTE</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   </head>
