ultimated pwa configurations

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="DiTech Ordini">
+    <meta name="apple-mobile-web-app-title" content="DiTech TRASFERTE">
     <meta name="msapplication-TileImage" content="./img/icons/android-chrome-96x96.png">
     <meta name="msapplication-TileColor" content="#009873">
     <link rel="apple-touch-icon" href="./img/icons/android-chrome-96x96.png">
