Added cache control. Trying to update also the server worker.

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="DiTech TRASFERTE">
-    <meta name="msapplication-TileImage" content="./img/icons/android-chrome-96x96.png">
-    <meta name="msapplication-TileColor" content="#009873">
-    <link rel="apple-touch-icon" href="./img/icons/android-chrome-96x96.png">
-    <link rel="icon" href="./favicon.ico">
-    <link rel="manifest" href="./manifest.json"/>
+    <meta charset="utf-8" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="DiTech TRASFERTE" />
+    <meta
+      name="msapplication-TileImage"
+      content="./img/icons/android-chrome-96x96.png"
+    />
+    <meta name="msapplication-TileColor" content="#009873" />
+    <link rel="apple-touch-icon" href="./img/icons/android-chrome-96x96.png" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="manifest" href="./manifest.json" />
     <title>DiTech/TRASFERTE</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Material+Icons"
+    />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but ditech-trasferte doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but ditech-trasferte doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
